--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,7 @@
-
+header {
+    font-size: 60px;
+    padding-top: 15px;
+}
 
 body {
     text-align: center;
@@ -18,3 +21,15 @@ img {
     width: 600px;
     height: 600px;
 }
+.input {
+    width: 300px;
+    height: 50px;
+    text-align: center;
+    color: black;
+}
+.ask {
+    width: 100px;
+    height: 20px;
+    
+}
+
